[gd_scene load_steps=2 format=2]

[ext_resource path="res://tools/font_tester/font_tester.gd" type="Script" id=1]

[node name="font_tester" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = 26.0
margin_bottom = -40.0
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 513.0

[node name="game_type_list" type="OptionButton" parent="PanelContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 20.0

[node name="font_list" type="ItemList" parent="PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 186.0
margin_bottom = 33.0
size_flags_vertical = 2
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 420.0
margin_right = 186.0
margin_bottom = 506.0

[node name="char_count" type="Label" parent="PanelContainer/VBoxContainer/info"]
margin_right = 186.0
margin_bottom = 14.0
text = "CHAR COUNT:"

[node name="font_height" type="Label" parent="PanelContainer/VBoxContainer/info"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 32.0
text = "FONT HEIGHT:"

[node name="max_width" type="Label" parent="PanelContainer/VBoxContainer/info"]
margin_top = 36.0
margin_right = 186.0
margin_bottom = 50.0
text = "MAX WIDTH:"

[node name="blank_width" type="Label" parent="PanelContainer/VBoxContainer/info"]
margin_top = 54.0
margin_right = 186.0
margin_bottom = 68.0
text = "BLANK WIDTH::"

[node name="row_width" type="Label" parent="PanelContainer/VBoxContainer/info"]
margin_top = 72.0
margin_right = 186.0
margin_bottom = 86.0
text = "ROW WIDTH::"

[node name="font_line" type="HBoxContainer" parent="."]
margin_left = 249.0
margin_top = 47.0
margin_right = 289.0
margin_bottom = 87.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_input" type="LineEdit" parent="."]
margin_left = 305.0
margin_top = 513.0
margin_right = 862.0
margin_bottom = 537.0
text = "This is a test line."
max_length = 32
__meta__ = {
"_edit_use_anchors_": false
}
